# meson_i2cdevlib

./: meson.build
Arduino/: meson.build
Arduino/BMP085/: meson.build
Arduino/I2Cdev/: meson.build
Arduino/MPU6050/: meson.build
